# Spyware-Accountability-Framework

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP_V2_COMPLETION.md  SECURITY.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml  ruleset-ci.yml
ailee_core/: interfaces.py  models_stub.py  privacy.py  reputation.py
ailee_core/backends/: classifier_backend.py  llm_backend.py  osint_semantic_backend.py
ci/ruleset_validation/: network_rule_validator.py  sigma_linter.py  yara_linter.py
docs/: active_prevention_guidance.md  architecture.md  ethics-and-governance.md  threat-model.md  usage-overview.md
governance/: abuse-handling-policy.md
governance/v2/: governance_board_structure.md  major_change_review_process.md  sensitive_data_request_policy.md
governance/v3/: v3_change_review.md
pipelines/: network_forensics_pipeline.py  osint_vendor_mapping_pipeline.py  reporting_pipeline.py
reports/templates/: brief_template.md
rulesets/: README.md
rulesets/network/: example_suricata_rules.rules
rulesets/sigma/: example_spyware_detection.yml
spyware-accountability-framework/: LICENSE  pyproject.toml
synthetic_data/: README.md  synthetic_infrastructure_graph_v2.json  synthetic_network_flows_v2.json  synthetic_network_flows_v3.json  synthetic_osint_entities_v2.json  synthetic_osint_entities_v3.json
tests/: test_cloudflare_standards.py  test_graph_analytics.py  test_live_backends.py  test_network_forensics_pipeline.py  test_osint_vendor_mapping_pipeline.py  test_privacy.py  test_reporting_pipeline.py  test_reputation.py
(+15 files in other folders)
